# doca_dma_benchmark

./: CMakeLists.txt  README.md  build.sh  dma_common.c  dma_common.h  dma_communication.c  dma_communication.h  dma_parameters.c  dma_parameters.h  local_dma_read_bw.c  local_dma_read_lat.c  local_dma_write_bw.c  local_dma_write_lat.c  remote_dma_read_bw.c  remote_dma_read_lat.c  remote_dma_write_bw.c  remote_dma_write_lat.c
cmake-3.16.8-Linux-x86_64/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
cmake-3.16.8-Linux-x86_64/doc/cmake/html/_static/: documentation_options.js
cmake-3.16.8-Linux-x86_64/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  break.html  build_command.html  build_name.html  cmake_host_system_information.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_test.html  ctest_update.html  ctest_upload.html  define_property.html  else.html  elseif.html  enable_language.html  enable_testing.html  (+83 more)
cmake-3.16.8-Linux-x86_64/doc/cmake/html/cpack_gen/: archive.html  bundle.html  cygwin.html  deb.html  dmg.html  external.html  freebsd.html  ifw.html  nsis.html  nuget.html  packagemaker.html  productbuild.html  rpm.html  wix.html
cmake-3.16.8-Linux-x86_64/doc/cmake/html/envvar/: ASM_DIALECT.html  ASM_DIALECTFLAGS.html  CC.html  CFLAGS.html  CMAKE_BUILD_PARALLEL_LEVEL.html  CMAKE_CONFIG_TYPE.html  CMAKE_GENERATOR.html  CMAKE_GENERATOR_INSTANCE.html  CMAKE_GENERATOR_PLATFORM.html  CMAKE_GENERATOR_TOOLSET.html  CMAKE_MSVCIDE_RUN_PATH.html  CMAKE_NO_VERBOSE.html  CMAKE_OSX_ARCHITECTURES.html  CSFLAGS.html  CTEST_INTERACTIVE_DEBUG_MODE.html  CTEST_OUTPUT_ON_FAILURE.html  CTEST_PARALLEL_LEVEL.html  CTEST_PROGRESS_OUTPUT.html  CTEST_USE_LAUNCHERS_DEFAULT.html  CUDACXX.html  CXX.html  (+16 more)
cmake-3.16.8-Linux-x86_64/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
cmake-3.16.8-Linux-x86_64/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
(+1463 files in other folders)
